# qtrade

./: .gitignore  README.md  pyproject.toml  requirements.txt
qtrade/: __init__.py  __main__.py  config.py  run_dashboard.py  run_example.py
qtrade/analysis/: correlation.py  group_analysis.py  ic_analysis.py
qtrade/backtest/: engine.py  engine_old.py  performance.py
qtrade/dashboard/: app.py  data_provider.py
qtrade/dashboard/assets/: sidebar.css
qtrade/dashboard/pages/: compare.py  factor.py  overview.py  positions.py  runs.py  trades.py
qtrade/data/: market_data.py
qtrade/examples/: custom_factors.py  custom_strategies.py
qtrade/factor/: base.py  engine.py
qtrade/persistence/: __init__.py  models.py  store.py
qtrade/strategy/: base.py
qtrade/utils/: display.py  plotting.py
